--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "@vue/test-utils": "1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "chokidar": "^3.4.0",
     "chromedriver": "^83.0.1",
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
@@ -68,9 +67,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "eslint-plugin-vuetify": "^1.0.0-beta.6",
+    "eslint-plugin-vuetify": "^1.0.0-beta.7",
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
+    "null-loader": "^4.0.0",
     "prettier": "^2.0.5",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
@@ -80,7 +80,7 @@
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0"
+    "vuetify-loader": "^1.6.0"
   },
   "keywords": [
     "vue",
