--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@mdi/font": "^5.3.45",
     "@tinymce/tinymce-vue": "^3.2.2",
     "axios": "^0.19.2",
