--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@mdi/font": "^5.3.45",
     "@tinymce/tinymce-vue": "^3.2.2",
+    "@toast-ui/vue-editor": "^2.3.1",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "codemirror": "^5.55.0",
