--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Admin template based on Vue and Vuetify",
   "author": "SaldanhaASCS <saldanhaascs@gmail.com>",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --https",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
@@ -51,18 +51,19 @@
     "@hapi/hoek": "^9.0.4",
     "@vue/cli-plugin-babel": "^4.5.3",
     "@vue/cli-plugin-e2e-nightwatch": "^4.5.3",
-    "@vue/cli-plugin-eslint": "~4.4.6",
-    "@vue/cli-plugin-pwa": "~4.4.6",
+    "@vue/cli-plugin-eslint": "~4.5.3",
+    "@vue/cli-plugin-pwa": "~4.5.3",
     "@vue/cli-plugin-unit-mocha": "^4.5.3",
     "@vue/cli-service": "^4.5.3",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "chromedriver": "^83.0.1",
+    "chromedriver": "^84.0.1",
     "core-js": "^3.6.5",
-    "css-loader": "^3.6.0",
+    "css-loader": "^4.2.1",
     "eslint": "^6.8.0",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -75,7 +76,7 @@
     "null-loader": "^4.0.0",
     "prettier": "^2.0.5",
     "sass": "^1.26.10",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^9.0.3",
     "script-loader": "^0.7.2",
     "style-loader": "^1.2.1",
     "stylus": "^0.54.8",
