--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "description": "Admin template based on Vue and Vuetify",
   "author": "SaldanhaASCS <saldanhaascs@gmail.com>",
   "scripts": {
-    "serve": "vue-cli-service serve --https",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@mdi/font": "^5.5.55",
-    "@tinymce/tinymce-vue": "^3.2.3",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdi/font": "^5.7.55",
+    "@tinymce/tinymce-vue": "^3.2.4",
     "@toast-ui/vue-editor": "^2.4.0",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
-    "codemirror": "^5.57.0",
+    "codemirror": "^5.58.1",
     "driver.js": "^0.9.8",
     "dropzone": "^5.7.2",
     "echarts": "^4.9.0",
@@ -34,27 +34,27 @@
     "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
-    "sortablejs": "^1.10.2",
+    "sortablejs": "^1.12.0",
     "tui-editor": "^1.4.10",
     "vue": "^2.6.12",
     "vue-count-to": "^1.0.13",
-    "vue-i18n": "^8.21.1",
-    "vue-router": "^3.4.3",
+    "vue-i18n": "^8.22.0",
+    "vue-router": "^3.4.7",
     "vue-splitpane": "^1.0.6",
     "vue-the-mask": "^0.11.1",
-    "vuedraggable": "^2.24.1",
-    "vuetify": "^2.3.10",
+    "vuedraggable": "^2.24.2",
+    "vuetify": "^2.3.14",
     "vuex": "^3.5.1",
-    "xlsx": "^0.16.7"
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@hapi/hoek": "^9.1.0",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.5.3",
-    "@vue/cli-plugin-eslint": "~4.5.3",
-    "@vue/cli-plugin-pwa": "~4.5.3",
-    "@vue/cli-plugin-unit-mocha": "^4.5.3",
-    "@vue/cli-service": "^4.5.3",
+    "@vue/cli-plugin-babel": "^4.5.7",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.5.7",
+    "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-plugin-pwa": "^4.5.7",
+    "@vue/cli-plugin-unit-mocha": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "1.0.3",
     "babel-eslint": "^10.1.0",
@@ -64,7 +64,7 @@
     "css-loader": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
@@ -73,12 +73,12 @@
     "eslint-plugin-vuetify": "^1.0.0-beta.7",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
-    "null-loader": "^4.0.0",
+    "null-loader": "^4.0.1",
     "prettier": "^2.1.2",
-    "sass": "^1.26.10",
+    "sass": "^1.27.0",
     "sass-loader": "^9.0.3",
     "script-loader": "^0.7.2",
-    "style-loader": "^1.2.1",
+    "style-loader": "^1.3.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^2.0.7",
